--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,12 +36,12 @@ const avatarSrcs: Array<string> = [
   />
 
   <HeroSection
-    title=`Equip Your Projects with <span
-        class="text-yellow-500 dark:text-yellow-400">ScrewFast</span>`
-    subTitle="Top-quality hardware tools and expert construction services for every project need."
-    primaryBtn="Start Exploring"
+    title=`新一代全球顶级域名 <span
+        class="text-yellow-500 dark:text-yellow-400">.BD</span>`
+    subTitle="为个人，企业和组织提供简洁、专业且独特的网络标识。立即注册属于你的 .BD 域名！"
+    primaryBtn="立即查询域名"
     primaryBtnURL="/products"
-    secondaryBtn="Contact Sales Team"
+    secondaryBtn="查看价格方案"
     secondaryBtnURL="/contact"
     withReview={true}
     avatars={avatarSrcs}
