--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,11 +29,6 @@ const avatarSrcs: Array<string> = [
 ---
 
 <MainLayout>
-  <AnnouncementBanner
-    btnId="dismiss-button"
-    btnTitle="Explore ScrewFast on GitHub"
-    url="https://github.com/mearashadowfax/ScrewFast"
-  />
 
   <HeroSection
     title=`新一代全球顶级域名 <span
@@ -47,7 +42,7 @@ const avatarSrcs: Array<string> = [
     avatars={avatarSrcs}
     rating=`<span class="font-bold">4.8</span> / 5`
     starCount={4}
-    reviews=`From Over <span class="font-bold">12.8k</span> Reviews`
+    reviews=`来自全球 <span class="font-bold">100000+</span> 满意客户`
     src={heroImage}
     alt="Stack of ScrewFast product boxes containing assorted hardware tools"
   />
